--- a/index_full.html
+++ b/index_full.html
@@ -575,6 +575,8 @@ background-color: rgba(0,0,0,0.2);
     <rm-plots  
         groups="{{cut_groups}}" 
         pos_path="{{pos_path}}"
+        active_group_a="{{active_group_a}}"
+        active_group_b="{{active_group_b}}"
         spike_times="[[spike_times]]"
         pos_xy="[[pos_xy]]"
         pos_dir="[[pos_dir]]"
